completed the rest of the exercise created a home page for the odin project and also tried to make the holy grail layout in which i had some issues with flex-wrap which i learned and applied it

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -17,9 +17,12 @@ body {
 
 .modal {
   background: white;
-  width: 480px;
+  width: 490px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 16px;
+  padding: 16px;
 }
 
 .icon {
@@ -33,6 +36,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -60,6 +64,7 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  margin-top: 16px;
 }
 
 button.cancel {
@@ -67,3 +72,14 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+div.header{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+  font-weight: 700;
+  font-size: 18px;
+  align-items: center;
+}
+
+
+
